finished search endpoint, needs to be fine-tuned
